# todo-challenge

./: .dockerignore  docker-compose.dev.yaml  docker-compose.yaml
docs/: README.md  frontend_guide.md  guide.md  setup.md
nginx/: Dockerfile  nginx.dev.conf
todo_backend/: .example.env  pyproject.toml
todo_backend/Docker/: Dockerfile  entrypoint.sh
todo_backend/authentication/: serializers.py  signals.py  tests.py  urls.py  views.py
todo_backend/tasks/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
todo_backend/tasks/migrations/: 0001_initial.py
todo_backend/todo_backend/: settings.py  urls.py
todo_frontend/: .example.env  package-lock.json  package.json  tsconfig.json
todo_frontend/Docker/: Dockerfile
todo_frontend/src/: App.tsx  config.ts
todo_frontend/src/api/: auth.ts  client.ts  tags.ts  tasks.ts
todo_frontend/src/components/Auth/: Login.tsx  Register.tsx
todo_frontend/src/components/Tasks/: TaskItem.tsx  index.tsx
todo_frontend/src/components/Tasks/TaskFilters/: TagSelectField.tsx  index.tsx
todo_frontend/src/components/Tasks/TaskForm/: TagSelect.tsx  index.tsx
todo_frontend/src/context/: Auth.tsx  Tags.tsx  Task.tsx
todo_frontend/src/models/: auth.model.ts  task.model.ts
todo_frontend/src/pages/: Login.tsx  Register.tsx
todo_frontend/src/utils/: http.ts
