[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todo_backend"
version = "1.0.0"
description = "Backend para prueba de Invera"
authors = [
    { name = "Heiner Enis", email = "heiner.enis@gmail.com" }
]
dependencies = [
    "django>=5.1.6,<5.2",
    "djangorestframework>=3.15.2,<3.16.0",
    "django-filter>=25.1,<26.0",
    "drf-spectacular>=0.28.0,<1.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "django-cors-headers>=4.7.0,<5.0.0"
]

